--- a/e2e/books/create_and_get_book.yaml
+++ b/e2e/books/create_and_get_book.yaml
@@ -3,19 +3,15 @@ runners:
   req:
     endpoint: http://localhost:8080
 debug: true
-vars:
-  createBookReq: "json://create_book_req.json"
-  id: 1
-  getBookRes: "json://get_book_res.json"
 steps:
   createBook:
     include:
       path: create_book.yaml
       vars:
-        createBookReq: "{{ vars.createBookReq }}"
+        createBookReq: "json://create_book_req.json"
   getBook:
     include:
       path: get_book.yaml
       vars:
-        id: {{ vars.id }}
-        getBookRes: "{{ vars.getBookRes }}"
+        id: "{{ steps.createBook.steps.createBook.res.body.id }}"
+        getBookRes: "json://get_book_res.json.template"
